[package]
name = "coins"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
axum = "0.8"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
mime = "0.3"
